# LiziEngine2D

./: .gitignore  Cargo.toml  README.md  TODO.md  config.json  example.py  lizilib.py  mathKit.py  requirements.txt
cpp_gui/: CMakeLists.txt  README_vcpkg_setup.md  vcpkg.json
cpp_gui/src/: FrameFileIO.cpp  FrameFileIO.h  main.cpp
examples/: basic_usage.py  demo.py  gravity_box.py  input_demo.py
lizi_engine/: __init__.py  config.json  markers.py
lizi_engine/compute/: __init__.py  cpu_vector.py  cpu_vector_field.py  gpu_vector_field.py  markers.py  vector_field.py
lizi_engine/core/: __init__.py  app.py  config.py  container.py  events.py  state.py
lizi_engine/graphics/: __init__.py  matplotlib_render.py  renderer.py
lizi_engine/input/: __init__.py  input_handler.py  key_map.py  mouse_map.py
lizi_engine/window/: __init__.py  window.py
plugins/: controller.py  marker_system.py  ui.py
scripts/: run_demo_matplotlib.py  run_demo_tkinter_gui.py  test_visualize_smoke.py  validate_random.py  validate_single_charge.py  validate_two_charges.py  validate_visualize_stats.py
src/: integrator.rs  interp.rs  lib.rs  main.rs  poisson_fft.rs  scatter.rs  sim.rs
src/core/: boundary.rs  integrator.rs  interaction.rs  interp.rs  lz2d.rs  mod.rs  particles.rs  poisson_fft.rs  poisson_solver.rs  scatter.rs  sim.rs
src/demo/: mod.rs  random_particles.rs  single_charge.rs  two_charges.rs
src/gui/: app.rs  interaction.rs
src/lizi2d/: grid.py  integrator.py  interp.py  particles.py  poisson_fft.py  scatter.py  sim.py  visualize_matplotlib.py  visualize_tkinter.py
src/presets/: config.rs
src/visual/: colors.rs  egui_app.rs  minifb_renderer.rs  mod.rs  window.rs
