[package]
name = "lizi-engine-2d"
version = "0.1.0"
edition = "2021"
description = "2D Electrostatic PIC Simulator (CPU) - Rust rewrite"

[dependencies]
ndarray = "0.17"
ndrustfft = "0.6"
num-complex = "0.4"
num-traits = "0.2"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
plotters = "0.3"
minifb = "0.27"
eframe = "0.31"
image = "0.25"

[[bin]]
name = "lizi2d"
path = "src/main.rs"